# rsfractal

./: .gitignore  Cargo.toml  LICENCE.md  Makefile.toml  Procfile  README.md  Trunk.toml  build.sh  config.json
.cargo/: config  config.toml
benches/: main.rs
config/: nginx.conf.erb  nginx.local.conf
docs/: index.html  rsfractal.js  rsfractal_bg.wasm  rsfractal_wasm.js  rsfractal_wasm_bg.wasm  worker.js
examples/: main.rs
gui/: Cargo.toml
gui/src/: main.rs  mandelbrot.wgsl  perturbation.wgsl  renderer.rs
mandelbrot/: Cargo.toml
mandelbrot/benches/: parameters.rs  rendering.rs
mandelbrot/examples/: image.rs
mandelbrot/src/: boundary_scanner.rs  color.rs  lib.rs  mandelbrot.rs  perturbation.rs  range.rs  rectangle.rs  vector.rs
scripts/: postprocess.sh
server/: Cargo.toml
server/src/: main.rs
src/: color.rs  lib.rs  main.rs  mandelbrot.rs  pool.rs  range.rs  rectangle.rs  ui.rs  vector.rs  wasm.rs
wasm/: Cargo.toml  Trunk.toml  index.css  index.html  index.sass  initializer.js
wasm/src/: lib.rs  main.rs  pool.rs  ui.rs  wasm.rs
