[package]
name = "rsfractal"
version = "0.1.0"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2018"

[dependencies]
num-complex = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
rayon = "*"
regex = "*"
lazy_static = "*"

[target.wasm32-unknown-unknown.dependencies]
seed = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
futures = "*"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "*"
features = [
    "DomRect",
    "DomRectReadOnly",
    "DedicatedWorkerGlobalScope",
    "WorkerGlobalScope",
    "WorkerLocation",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    "Worker",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Navigator",
    "ImageData",
    "Performance"
]

[dev-dependencies]
image = "*"
serde_json = "*"

[lib]
crate-type = ["rlib", "cdylib"]

[[example]]
name = "main"

[profile.release]
lto = true
opt-level = 3
debug = true
panic = "abort"