[workspace]
members = ["mandelbrot", "wasm", "gui"]
default-members = ["mandelbrot", "gui"]
resolver = "3"

[workspace.package]
description = "Rusty fractals with WebAssembly"
version = "0.1.0"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2024"
publish = false
homepage = "https://rikshot.github.io/rsfractal"
repository = "https://github.com/rikshot/rsfractal"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
