[package]
name = "rsfractal-gui"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rsfractal-mandelbrot = { path = "../mandelbrot" }
winit = "*"
pixels = "*"
num-complex = "*"
anyhow = "*"
