[package]
name = "rsfractal-mandelbrot"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
num-complex = "*"
num-traits = "*"
rayon = "*"
color = "*"
image = { version = "*", default-features = false, features = [
    "png",
], optional = true }

[[example]]
name = "image"
required-features = ["image"]
