[package]
name = "rsfractal-mandelbrot"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
num = "*"
rayon = "*"
bytemuck = { version = "*", features = ["derive"] }
colorgrad = { version = "*", features = ["lab"] }
image = { version = "*", default-features = false, features = [
    "png",
], optional = true }
strum = { version = "*", features = ["derive"] }

[dev-dependencies]
divan = "*"

[[example]]
name = "image"
required-features = ["image"]

[[bench]]
name = "parameters"
harness = false

[[bench]]
name = "rendering"
harness = false
