[package]
name = "rsfractal-mandelbrot"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
perturbation = ["dashu"]

[dependencies]
num = "*"
rayon = "*"
bytemuck = { version = "*", features = ["derive"] }
colorgrad = { version = "*", features = ["lab"] }
serde = { version = "*", features = ["derive", "rc"] }
image = { version = "*", default-features = false, features = [
    "png",
], optional = true }
strum = { version = "*", features = ["derive"] }
dashu = { version = "*", optional = true }

[dev-dependencies]
divan = "*"

[[example]]
name = "image"
required-features = ["image"]

[[bench]]
name = "parameters"
harness = false

[[bench]]
name = "rendering"
harness = false
