[package]
name = "rsfractal-wasm"
description = "Rusty fractals with WebAssembly"
version = "0.1.0"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2018"
publish = false
homepage = "https://rikshot.github.io/rsfractal"
repository = "https://github.com/rikshot/rsfractal"
license = "MIT"

[dependencies]
rsfractal-mandelbrot = { path = "../mandelbrot" }
rayon = "*"
rmp-serde = "*"
base64 = "*"
seed = { git = "https://github.com/rikshot/seed" }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
futures = "*"

[dependencies.web-sys]
version = "*"
features = [
    "DomRect",
    "DomRectReadOnly",
    "DedicatedWorkerGlobalScope",
    "WorkerGlobalScope",
    "WorkerLocation",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Navigator",
    "ImageData",
    "Performance"
]

[lib]
crate-type = ["cdylib"]
