[package]
name = "rsfractal-wasm"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rsfractal-mandelbrot = { path = "../mandelbrot" }
rayon = "*"
wasm-bindgen-rayon = { version = "*", features = ["no-bundler"] }
wasm-bindgen = { version = "*", features = ["enable-interning"] }
js-sys = "*"
leptos = { version = "*", features = ["nightly", "csr"] }
num-complex = "*"
console_error_panic_hook = "*"
futures = { version = "*", default-features = false }

[dependencies.web-sys]
version = "*"
features = ["CanvasRenderingContext2d", "ImageData", "DomRect", "Element"]
